File: components/nexus-repository-config/src/test/virtualthread/org/sonatype/nexus/repository/config/ConfigurationDAOVirtualThreadTest.java